--- a/requirements.txt
+++ b/requirements.txt
@@ -34,3 +34,8 @@ Jinja2>=3.0.0
 pytest>=7.0.0
 black>=22.0.0
 flake8>=4.0.0
+
+fastapi==0.104.1
+uvicorn==0.24.0
+python-multipart==0.0.6
+pydantic==2.5.0
